macos/brightness.h

#ifndef BRIGHTNESS_H
#define BRIGHTNESS_H

#include <stdint.h>

float BrightnessGet(void);
uint8_t BrightnessSet(float brightness);

#endif /* BRIGHTNESS_H */